--- a/hugo-blox/blox/community/logos.html
+++ b/hugo-blox/blox/community/logos.html
@@ -1,4 +1,4 @@
-{{/* Hugo Blox: Stats */}}
+{{/* Hugo Blox: Logos */}}
 {{/* Documentation: https://hugoblox.com/blocks/ */}}
 {{/* License: https://github.com/HugoBlox/hugo-blox-builder/blob/main/LICENSE.md */}}
 
