Change twitter for bluesky

--- a/hugo-blox/blox/community/contact-zh.html
+++ b/hugo-blox/blox/community/contact-zh.html
@@ -23,8 +23,8 @@
             {{ $block.content.linkedin | markdownify }}
         </li>
         <li class="relative mb-4 pl-6">
-            {{ partial "functions/get_icon" (dict "name" "brands/twitter" "attributes" `class="inline-block pr-3" style="height: 1em;"`)  }}
-            {{ $block.content.twitter | markdownify }}
+            {{ partial "functions/get_icon" (dict "name" "brands/bluesky" "attributes" `class="inline-block pr-3" style="height: 1em;"`)  }}
+            {{ $block.content.bluesky | markdownify }}
         </li>
         <li class="relative mb-4 pl-6">
             {{ partial "functions/get_icon" (dict "name" "brands/github" "attributes" `class="inline-block pr-3" style="height: 1em;"`)  }}
