--- a/hugo-blox/blox/community/contact-zh.html
+++ b/hugo-blox/blox/community/contact-zh.html
@@ -9,7 +9,9 @@
 {{ $title := $block.content.title | emojify | $page.RenderString }}
 {{ $text := $block.content.text | emojify | $page.RenderString }}
 <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-    <div id="bing-map" style="order:1;width: 100%; height: 100%;"></div><script>function loadMap(){var map = new Microsoft.Maps.Map(document.getElementById("bing-map"), {zoom: 13,mapTypeId: Microsoft.Maps.MapTypeId.canvasLight});Microsoft.Maps.loadModule("Microsoft.Maps.Search", function () {var searchManager = new Microsoft.Maps.Search.SearchManager(map);var requestOptions = {bounds: map.getBounds(),where: "23 Thomson Road Wan Chai Hong Kong",callback: function (answer, userData) {map.setView({ center: new Microsoft.Maps.Location(answer.results[0].location.latitude, answer.results[0].location.longitude) });map.entities.push(new Microsoft.Maps.Pushpin(answer.results[0].location));}};searchManager.geocode(requestOptions);});}</script><script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?key=AkLj1p_g1w7lFb8lJZ-XnicObnu2-ydEpmn6eryraluxl_x3bDo0Jx6w58b7ZJt2&callback=loadMap" async defer></script>
+    {{ $imgObj := resources.Get ("media/googleprofile.png") }}
+    {{ $img := $imgObj.Process "webp" }}
+    <a href="https://maps.app.goo.gl/o7hEiKivD3A37Spz8"><img class="rounded-lg" src="{{$img.RelPermalink}}" alt="Business profile" style="order:1;width: 100%; height: 100%;"></a>
     <div class="mt-4 md:mt-0">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{$title}}</h2>
         <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">{{$text}}</p>
