--- a/hugo-blox/blox/community/contact.html
+++ b/hugo-blox/blox/community/contact.html
@@ -9,11 +9,11 @@
 {{ $title := $block.content.title | emojify | $page.RenderString }}
 {{ $text := $block.content.text | emojify | $page.RenderString }}
 <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-    <iframe class="w-full" src="https://storage.googleapis.com/maps-solutions-5t1klb5xxp/locator-plus/i5i2/locator-plus.html"
-    width="100%" height="100%"
-    style="border:0; order: 1;"
-    loading="lazy">
-    </iframe>
+    {{ $imgObj := resources.Get (printf "media/googleprofile_%s.png" $page.Language.Lang) | default (resources.Get "media/googleprofile_en.png") }}
+    {{ $img := $imgObj.Process "webp" }}
+    <a href="https://maps.app.goo.gl/o7hEiKivD3A37Spz8" target="_blank" rel="noopener noreferrer">
+        <img class="rounded-lg" src="{{$img.RelPermalink}}" alt="Business profile" style="order:1;width: 100%; height: 100%;">
+    </a>
     <div class="mt-4 md:mt-0">
         <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{$title}}</h2>
         <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">{{$text}}</p>
@@ -33,6 +33,10 @@
         <li class="relative mb-4 pl-6">
             {{ partial "functions/get_icon" (dict "name" "brands/github" "attributes" `class="inline-block pr-3" style="height: 1em;"`)  }}
             {{ $block.content.github | markdownify }}
+        </li>
+        <li class="relative mb-4 pl-6">
+            {{ partial "functions/get_icon" (dict "name" "hero/building-office-2" "attributes" `class="inline-block pr-3" style="height: 1em;"`)  }}
+            {{ $block.content.address | markdownify }}
         </li>
         </ul>
     </div>
